# argyle-upwork-challenge

./: Dockerfile  README.md  pyproject.toml  scan_data.json  start.sh  state.json
scanner/: login.py  spider.py  targets.py
spider/: cookies.py  spider.py  targets.py  text.txt
tests/: spider_test.py  test_spider.py
