[tool.poetry]
name = "spider"
version = "0.1.0"
description = ""
authors = ["Arthur Borges <arthurborges.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
python-dotenv = "^0.17.1"
playwright = "^1.12.1"
pydantic = "^1.8.2"
flake8 = "^3.9.2"
mypy = "^0.902"
lxml = "^4.6.3"
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-playwright = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
